src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_NoIdForResource.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <DockPanel.Resources>
                <Style x:Key="Style1" TargetType="{x:Type Button}">
                </Style>                
                <SolidColorBrush Color="Red" />
        </DockPanel.Resources>

        <Button Style="{DynamicResource Style1}" />
</DockPanel>
</Page>
